# cross-lib-rs

./: Cargo.toml  README.md
.cargo/: config
src/: greetings.h  lib.rs
