[package]
name = "greetings_rs"
version = "0.1.0"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "greetings_rs"
crate-type = ["staticlib"]

[dependencies]
cstr_core = "*"
cty = "*"
heapless = "*"

[target.'cfg(target_arch = "arm")'.dependencies]
alloc-cortex-m = "*"
cortex-m-rt = "*"

[target.'cfg(any(target_arch = "aarch64", target_arch="x86_64"))'.dependencies]
jemallocator = "*"
